refactor: move tests from in-source to separate tests/ directory

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,7 @@
     "declaration": true,
     "outDir": "./dist",
     "rootDir": "./src",
-    "resolveJsonModule": true,
-    "types": ["vitest/importMeta"]
+    "resolveJsonModule": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
